# dnd-bot

./: .gitignore  Procfile  README.md  bot_config.py  commander.py  config.py  data.db  dbsetup.py  discord_starter.py  expressions.py  get_spell.py  help.py  macros.json  parser_classes.py  parser_expr_test.py  parser_unit_test.py  ply_data.py  pyproject.toml  requirements.txt  server.py  server_manager.py  spells.py  util.py  vk_starter.py
app/ai_client/: connection_manager.py
app/commands/: __init__.py  base.py
app/commands/cogs/: __init__.py  ai_talking.py  dice.py  game.py  macros.py  misc.py  (+3 more)
app/enums/: LangEnum.py  PackType.py  Pf2Rarity.py  __init__.py  base.py
app/game_data/: __init__.py  classes.py  dnd_su.py  dnd_wikidot.py  pf2.py
app/models/: markdownResponse.py  messageData.py  pf2Response.py  rollResponse.py
app/parser/: __init__.py  custom_random.py  parser_classes.py  parser_expr_test.py  ply_data.py  types.py
app/tasks/: __init__.py  games.txt  gaming.py
app/util/: config.py  gamedata_buttons.py  long_message.py  markdown.py  tables.py
commands/: __init__.py  basic_commands.py  dice.py  function_commands.py  macros.json  macros.py  macros_commands.py  misc.py  random_commands.py  talking.py  technical.py
commands_handler/: commander.py  server.py
cool_embed_tables/: __init__.py  tables.py
game_data/: RadGridExport.csv  __init__.py  dnd_su.py  dnd_wikidot.py  pf2.py
parser/: __init__.py  comments.py  custom_random.py  parser_classes.py  parser_expr_test.py  ply_data.py  types.py
tasks/: __init__.py  games.txt  gaming.py
(+6 files in other folders)
